@@ -3683,6 +3683,13 @@ static const AVCodecDescriptor codec_descriptors[] = {
         .long_name = NULL_IF_CONFIG_SMALL("G.728"),
         .props     = AV_CODEC_PROP_INTRA_ONLY | AV_CODEC_PROP_LOSSY,
     },
+    {
+        .id        = AV_CODEC_ID_PCA,
+        .type      = AVMEDIA_TYPE_AUDIO,
+        .name      = "pca",
+        .long_name = NULL_IF_CONFIG_SMALL("PCA (Perfect Clarity Audio)"),
+        .props     = AV_CODEC_PROP_LOSSLESS,
+    },
 
     /* subtitle codecs */
     {
