@@ -56,6 +56,7 @@ version <next>:
 - baf demuxer
 - msnd demuxer
 - mipu demuxer
+- Perfect Clarity Audio decoder and parser
 
 
 version 7.1:
